# src/main/kotlin/player/infrastructure/drive/adapter/rest/routes/player/Create.kt
@@ -1,7 +1,9 @@
 package com.romina.player.infrastructure.drive.adapter.rest.routes.player
 
+import com.romina.player.application.domain.ports.`in`.CreatePlayerCommand
 import com.romina.player.application.domain.ports.`in`.CreatePlayerUseCase
 import com.romina.player.infrastructure.drive.request.CreatePlayerRequest
+import com.romina.player.infrastructure.drive.response.CreatePlayerResponse
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
@@ -11,6 +13,7 @@ import io.ktor.server.routing.post
 fun Route.createRoute(useCase : CreatePlayerUseCase){
     post("/players"){
         val body = call.receive<CreatePlayerRequest>()
-        call.respond(HttpStatusCode.Created, useCase.createPlayer(body).toString())
+        val playerId = useCase.createPlayer(CreatePlayerCommand(body.playerName))
+        call.respond(HttpStatusCode.Created, CreatePlayerResponse(playerId.toString()))
     }
 }
